# openenv_invotex

./: .dockerignore  .env.example  .gitignore  .hfignore  Dockerfile  MINI_BLOG.md  README.md  __init__.py  baseline.py  client.py  inference.py  models.py  openenv.yaml  presentation.html  pyproject.toml  render.yaml
domains/: __init__.py  base_domain.py
domains/customer_support/: __init__.py  db_models.py  domain.py  graders.py  tasks.py  tools.py
domains/email_triage/: __init__.py  db_models.py  domain.py  graders.py  tasks.py  tools.py
domains/traffic_control/: __init__.py  db_models.py  domain.py  graders.py  tasks.py  tools.py
outputs/: .gitkeep
scripts/: run_baselines.bat  train_unsloth.ipynb  validate-submission.sh
server/: app.py  domain_registry.py  environment.py  system_prompt_builder.py
server/utils/: __init__.py  db.py  logger.py  metrics.py
tests/: test_antihacking.py  test_smoke.py
